--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     
     <title>Meu filipenses 1:3</title>
 </head>
